--- a/src/main/resources/templates/vets/index.html
+++ b/src/main/resources/templates/vets/index.html
@@ -6,5 +6,21 @@
 </head>
 <body>
   <h1 th:text="'Список ветеринаров'">Список ветеринаров...</h1>
+  <table>
+      <thead>
+      <tr>
+          <th>Id</th>
+          <th>Имя</th>
+          <th>Фамилия</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="vet : ${vets}">
+          <td th:text="${vet.id}">1</td>
+          <td th:text="${vet.firstName}">Йося</td>
+          <td th:text="${vet.lastName}">Шекель</td>
+      </tr>
+      </tbody>
+  </table>
 </body>
 </html>
