--- a/src/main/resources/templates/owners/index.html
+++ b/src/main/resources/templates/owners/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns:th="http://www.thymeleaf.org">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>Список владельцев домашних животных</title>
 </head>
 <body>
-    <h1 th:text="'Список владельцев'">Список владельцев</h1>
-    <table>
+    <h2 th:text="'Список владельцев'">Список владельцев</h2>
+    <table class="table table-striped">
         <thead>
         <tr>
-            <th>Id</th>
-            <th>Имя</th>
-            <th>Фамилия</th>
+            <th style="width: 150px;">Id</th>
+            <th style="width: 150px;">Имя</th>
+            <th style="width: 150px;">Фамилия</th>
         </tr>
         </thead>
         <tbody>
